--- a/backend/package.json
+++ b/backend/package.json
@@ -12,6 +12,7 @@
     "@directus/sdk": "^10.3.3",
     "@medusajs/admin": "^6.0.1",
     "express": "^4.18.2",
-    "mongoose": "^7.2.0"
+    "mongoose": "^7.2.0",
+    "pg": "^8.11.1"
   }
 }
