--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -25,7 +25,7 @@ services:
         - traefik.http.middlewares.demo1_backend.headers.browserXSSFilter=true
         - traefik.http.middlewares.demo1_backend.headers.contentTypeNosniff=true
         - traefik.http.middlewares.demo1_backend.headers.forceSTSHeader=true
-        - traefik.http.middlewares.demo1_backend.headers.SSLHost=${avizou.eu}
+        - traefik.http.middlewares.demo1_backend.headers.SSLHost=avizou.eu
         - traefik.http.middlewares.demo1_backend.headers.STSIncludeSubdomains=true
         - traefik.http.middlewares.demo1_backend.headers.STSPreload=true
         - traefik.http.routers.demo1_backend.middlewares=demo1_backend-compress,demo1_backend
@@ -49,7 +49,7 @@ services:
         - traefik.http.middlewares.demo1_frontapp.headers.browserXSSFilter=true
         - traefik.http.middlewares.demo1_frontapp.headers.contentTypeNosniff=true
         - traefik.http.middlewares.demo1_frontapp.headers.forceSTSHeader=true
-        - traefik.http.middlewares.demo1_frontapp.headers.SSLHost=${avizou.eu}
+        - traefik.http.middlewares.demo1_frontapp.headers.SSLHost=avizou.eu
         - traefik.http.middlewares.demo1_frontapp.headers.STSIncludeSubdomains=true
         - traefik.http.middlewares.demo1_frontapp.headers.STSPreload=true
         - traefik.http.routers.demo1_frontapp.middlewares=demo1_frontapp-compress,demo1_frontapp
@@ -84,7 +84,7 @@ services:
         - traefik.http.middlewares.demo1_directus.headers.browserXSSFilter=true
         - traefik.http.middlewares.demo1_directus.headers.contentTypeNosniff=true
         - traefik.http.middlewares.demo1_directus.headers.forceSTSHeader=true
-        - traefik.http.middlewares.demo1_directus.headers.SSLHost=${avizou.eu}
+        - traefik.http.middlewares.demo1_directus.headers.SSLHost=avizou.eu
         - traefik.http.middlewares.demo1_directus.headers.STSIncludeSubdomains=true
         - traefik.http.middlewares.demo1_directus.headers.STSPreload=true
         - traefik.http.routers.demo1_directus.middlewares=demo1_directus-compress,demo1_directus
